Header responsive, scroll down y carrousel

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -17,75 +17,101 @@
 
 <body>
 <!-- HEADER -->
-    <div class="banner">
+<div class="scroll">
+    <div class="banner banner__header">
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
-        <p>Envíos gratis dentro de CABA &nbsp &nbsp • &nbsp &nbsp Envíos a todo el país  &nbsp &nbsp • &nbsp &nbsp  Hasta 12 cuotas sin interés</p>
+        <p><span>Envíos gratis dentro de CABA &nbsp &nbsp  •</span> &nbsp &nbsp Hasta 30% off  &nbsp &nbsp • &nbsp &nbsp  12 cuotas sin interés</p>
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
-    </div> 
-    
-    <header> 
-        <nav class="nav">
+    </div>
+        <div>
+            <div class="register__container banner__header">
+                <div class="registro">
+                    <ul>
+                        <li>
+                            <a href="#" class="cuenta">Iniciar Sesión</a>
+                        </li>
+                        <li>
+                            <span>/</span>
+                        </li>
+                        <li>
+                            <a href="#" class="cuenta">Registrarse</a>
+                        </li>
+                        <li type="button" class="registro__button position-relative">
+                            <div class="compras"> 
+                                <a href="404.html"><span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
+                            </div>
+                            <span class="registro__badge badge rounded-pill badge__cart">
+                                0
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+</div> 
 
+<header> 
+        <nav class="nav">
             <div class="menu--small">
                 <ul class="menu__list--sm">
-                    <li>
-                        <a href="#"><span class="iconify menu__hamburguer icon" data-icon="whh:menu" data-inline="false"></span></a>
-                    </li>
+                        <div class="hamburger__menu">
+                            <input type="checkbox" class="toggler">
+                            <div class="hamburger"><div></div></div>
+                            <div class="menu">
+                                <div>
+                                <div>
+                                    <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="productos.html">Productos</a></li>
+                                    <li><a href="diseno.html">Armá tu diseño</a></li>
+                                    <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+                                    <li><a href="contacto.html">Contacto</a></li>
+                                    </ul>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
                     <li>
                         <a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a>
                     </li>
-                    <ul class="menu__icons--end">
-                        <li>
-                            <span class="iconify icon__search--ms icon" data-icon="feather:search" data-inline="false"></span>
-                        </li>
-                        <li>
-                            <a href="#"><span class="iconify icon__cart icon" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
-                        </li>
-                    </ul>
+                    <li>
+                        <ul class="menu__icons--end">
+                            <li>
+                                <span class="iconify icon__search--ms icon" data-icon="feather:search" data-inline="false"></span>
+                            </li>
+                            <li>
+                                <a href="#"><span class="iconify icon__cart icon" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
 
             <div class="menu--large">
-                <div class="content__logo">
-                    <div>
-                        <a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a>
-                    </div>
-                    <div class="registro">
-                        <ul>
-                            <li>
-                                <a href="#" class="cuenta">Iniciar Sesión</a>
-                            </li>
-                            <li>
-                                <span>/</span>
-                            </li>
-                            <li>
-                                <a href="#" class="cuenta">Registrarse</a>
-                            </li>
-                            <li type="button" class="registro__button position-relative">
-                                <div class="compras"> 
-                                    <span> Mi compra</span>
-                                    <span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span>
-                                </div>
-                                <span class="registro__badge badge rounded-pill badge__cart">
-                                    0
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
                 <div class="menu__pages">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt="Logo" id="logo"></a>
+                    </div>
                     <ul>
-                        <li><a href="index.html" class="menu__pages--active">HOME</a></li>
-                        <li><a href="productos.html">PRODUCTOS</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li class="submenu"><a href="productos.html">PRODUCTOS</a><span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span>
+                            <ul class="submenu__pages">
+                                <li class="submenu--item"><a href="productos.html">Comedor</a></li>
+                                <li class="submenu--item"><a href="productos.html">Dormitorio</a></li>
+                                <li class="submenu--item"><a href="productos.html">Living</a></li>
+                                <li class="submenu--item"><a href="productos.html">Habitación</a></li>
+                                <li class="submenu--item"><a href="productos.html">Organizadores</a></li>
+                                <li class="submenu--item"><a href="productos.html">Decoración</a></li>
+                            </ul></li>
+                        </li>
                         <li><a href="diseno.html">ARMA TU DISEÑO</a></li>
-                        <li><a href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
+                        <li><a href="sobrenosotros.html" class="menu__pages--active">SOBRE NOSOTROS</a>
                         <li><a href="contacto.html">CONTACTO</a></li>
                     </ul>
                     <div>
                         <form action="#" class="buscador">
                             <label for="buscador" hidden>Ingresa tu busqueda</label>
-                            <input type="text" id="buscador" required placeholder="Buscá un producto...">
+                            <input type="text" id="buscador" required>
                             <button type="submit" class="btn btn__forms">
                                 <span class="iconify icon__search" data-icon="feather:search" data-inline="false"></span>  
                             </button>
@@ -94,7 +120,7 @@
                 </div> 
             </div>  
         </nav>
-    </header>  
+</header>  
 
 <main>
     <!-- WHATSAPP ICON -->
