--- a/index.html
+++ b/index.html
@@ -15,17 +15,42 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
     <!-- HEADER -->
-    <div class="banner banner__header banner__header--transparent banner__header--scroll">
+    <div class="scroll">
+    <div class="banner banner__header">
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
         <p><span>Envíos gratis dentro de CABA &nbsp &nbsp  •</span> &nbsp &nbsp Hasta 30% off  &nbsp &nbsp • &nbsp &nbsp  12 cuotas sin interés</p>
         <i class="em em-zap" aria-role="presentation" aria-label="HIGH VOLTAGE SIGN"></i>
+    </div>
+        <div>
+            <div class="register__container banner__header">
+                <div class="registro">
+                    <ul>
+                        <li>
+                            <a href="#" class="cuenta">Iniciar Sesión</a>
+                        </li>
+                        <li>
+                            <span>/</span>
+                        </li>
+                        <li>
+                            <a href="#" class="cuenta">Registrarse</a>
+                        </li>
+                        <li type="button" class="registro__button position-relative">
+                            <div class="compras"> 
+                                <a href="404.html"><span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span></a>
+                            </div>
+                            <span class="registro__badge badge rounded-pill badge__cart">
+                                0
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div> 
 
     <header> 
         <nav class="nav">
-
             <div class="menu--small">
                 <ul class="menu__list--sm">
                         <div class="hamburger__menu">
@@ -62,46 +87,30 @@
             </div>
 
             <div class="menu--large">
-                <div class="content__logo">
-                    <div>
-                        <a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></a>
-                    </div>
-                    <div class="registro">
-                        <ul>
-                            <li>
-                                <a href="#" class="cuenta">Iniciar Sesión</a>
-                            </li>
-                            <li>
-                                <span>/</span>
-                            </li>
-                            <li>
-                                <a href="#" class="cuenta">Registrarse</a>
-                            </li>
-                            <li type="button" class="registro__button position-relative">
-                                <div class="compras"> 
-                                    <span> Compras</span>
-                                    <span class="iconify icon__cart" data-icon="fluent:cart-16-regular" data-inline="false"></span>
-                                </div>
-                                <span class="registro__badge badge rounded-pill badge__cart">
-                                    0
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
                 <div class="menu__pages">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png" alt="Logo" id="logo"></a>
+                    </div>
                     <ul>
                         <li><a href="index.html" class="menu__pages--active">HOME</a></li>
-                        <li><a href="productos.html">PRODUCTOS</a></li>
+                        <li class="submenu"><a href="productos.html">PRODUCTOS<span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                            <ul class="submenu__pages">
+                                <li class="submenu--item"><a href="productos.html">Comedor</a></li>
+                                <li class="submenu--item"><a href="productos.html">Dormitorio</a></li>
+                                <li class="submenu--item"><a href="productos.html">Living</a></li>
+                                <li class="submenu--item"><a href="productos.html">Habitación</a></li>
+                                <li class="submenu--item"><a href="productos.html">Organizadores</a></li>
+                                <li class="submenu--item"><a href="productos.html">Decoración</a></li>
+                            </ul></li>
+                        </li>
                         <li><a href="diseno.html">ARMA TU DISEÑO</a></li>
-                        <li><a href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
+                        <li><a href="sobrenosotros.html">SOBRE NOSOTROS</a>
                         <li><a href="contacto.html">CONTACTO</a></li>
                     </ul>
                     <div>
                         <form action="#" class="buscador">
                             <label for="buscador" hidden>Ingresa tu busqueda</label>
-                            <input type="text" id="buscador" required placeholder="Buscá un producto...">
+                            <input type="text" id="buscador" required>
                             <button type="submit" class="btn btn__forms">
                                 <span class="iconify icon__search" data-icon="feather:search" data-inline="false"></span>  
                             </button>
@@ -158,11 +167,28 @@
 
     <!-- CAROUSEL -->
 <div id="slider">
-    <figure>
-        <img src="images/Carousel/Carousel1.jpg" alt="carousel imagen 1">
-        <img src="images/Carousel/Carousel2.jpg" alt="carousel imagen 2">
-        <img src="images/Carousel/Carousel3.jpg" alt="carousel imagen 3">
-    </figure>
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="figure">
+        <div class="caorusel__img" id="carousel1">
+            <p>Te ayudamos a crear</p>
+            <h1>Espacios únicos</h1>
+            <a href="productos.html" class="slider__btn">Ver más</a>
+        </div>
+        <div class="caorusel__img" id="carousel2">
+            <p>Diseñamos</p>
+            <h1>Tus muebles a medida</h1>
+            <a href="productos.html" class="slider__btn">Armar diseño</a>
+        </div>
+        <div class="caorusel__img" id="carousel3">
+            <p>Nos apasiona</p>
+            <h1>Diseñar interiores</h1>
+            <a href="productos.html" class="slider__btn">Asesorarme</a>
+        </div>
+    </div>
 </div>
 
     <div class="hero--sm">
@@ -180,7 +206,7 @@
             <input type="checkbox" id="close">
             <label for="close" id="btn__close">X</label>
             <h1>¡Ya llega!</h1>
-            <p>Descuentos exclusivos en toda nuestra página desde 30% off</p>
+            <p>Descuentos exclusivos en toda nuestra página <span class="negrita">desde 30% off</span></p>
             <div class="countdown d-flex justify-content-center" data-count="2021/9/13">
                 <div>
                     <h3>%d</h3>
@@ -204,7 +230,8 @@
                 <p>Suscribite ahora y enterate de todos nuestros descuentos</p>
                 <form action="#" method="post" role="form" class="modal__form">
                     <div class="modal__form--container">
-                        <input type="email" name="email" placeholder="usuario@ejemplo.com" class="input__form"><input type="submit" class="form__btn" value="Suscribirme">
+                        <input type="email" name="email" placeholder="usuario@ejemplo.com" class="input__form">
+                        <a href="404.html" class="form__btn">Suscribirme</a>
                     </div>
                 </form>
             </div>
@@ -254,25 +281,29 @@
     </section>
     
     <!-- CARROUSEL ESTILOS -->
-    <article>
+    <article class="estilos">
+        <!-- <div class="header__emojis">
+            <i class="em em-star-struck" aria-role="presentation" aria-label="GRINNING FACE WITH STAR EYES"></i>
+            <h2>Nuestros estilos</h2>
+            <i class="em em-fire" aria-role="presentation" aria-label="FIRE"></i>
+        </div> -->
 
-        <h2>Nuestros estilos</h2>
         <div class="carousel__estilos">
 
-            <a href="#content02" class="slider slider__left">&#5130;</a>
-            <a href="#content02" class="slider slider__right">&#5125;</a>
+            <!-- <a href="#content02" class="slider slider__left">&#5130;</a>
+            <a href="#content02" class="slider slider__right">&#5125;</a> -->
 
             <div class="carousel__main">
                 <div id="content1" class="content">
-                    <div class="carousel__img" id="carousel1__1"><p class="estilos__text">Nórdico</p></div>
-                    <div class="carousel__img" id="carousel1__2"><p class="estilos__text">Industrial</p></div>
-                    <div class="carousel__img" id="carousel1__3"><p class="estilos__text">Wabisabi</p></div>
-                    <div class="carousel__img" id="carousel1__4"><p class="estilos__text">Vintage</p></div>
-                    <div class="carousel__img" id="carousel1__5"><p class="estilos__text">Minimalista</p></div>
-                    <div class="carousel__img" id="carousel1__6"><p class="estilos__text">Boho</p></div>
-                    <div class="carousel__img" id="carousel1__7"><p class="estilos__text">Rústico</p></div>
+                    <div class="carousel__img" id="carousel1__1"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Nórdico</a></p></div>
+                    <div class="carousel__img" id="carousel1__2"><p><a href="productos.html" class="estilos__text">&nbsp   Estilo <br> Industrial</a></p></div>
+                    <div class="carousel__img" id="carousel1__3"><p><a href="productos.html" class="estilos__text">&nbsp   Estilo <br> Wabisabi</a></p></div>
+                    <div class="carousel__img" id="carousel1__4"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Vintage</a></p></div>
+                    <div class="carousel__img" id="carousel1__5"><p><a href="productos.html" class="estilos__text">&nbsp &nbsp    Estilo <br> Minimalista</a></p></div>
+                    <div class="carousel__img" id="carousel1__6"><p><a href="productos.html" class="estilos__text"> Estilo <br> Boho</a></p></div>
+                    <div class="carousel__img" id="carousel1__7"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Rústico</a></p></div>
                 </div>
-                <div id="content2" class="content">
+                <!-- <div id="content2" class="content">
                     <div class="carousel__img">Étnico</div>
                     <div class="carousel__img">Otro</div>
                     <div class="carousel__img">Otro</div>
@@ -280,7 +311,7 @@
                     <div class="carousel__img">Ecológico</div>
                     <div class="carousel__img">Otro</div>
                     <div class="carousel__img">Otro</div>
-                </div>
+                </div> -->
             </div>
         </div>
     </article>
@@ -606,9 +637,21 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
-  <script src="js/main.js"></script>
+    <script> AOS.init(); </script>
+    <script src="js/main.js"></script>
+    <script type="text/javascript">
+    var lastScrollTop = 0;
+    .scroll = document.getElementById(".scroll");
+    window.addEventListener("scroll", function (){
+    var scrollTop = window.pageYOffset || document 			
+    .documentElement.scrollTop;
+    if (scrollTop > lastScrollTop){
+        .scroll.style.top="-100px";
+    } else {
+        .scroll.style.top="0";
+    }
+    })
+    </script>
+
 </body>
 </html>
