Arreglos en Diseno y Aboutus + generales

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title, description & SEO -->
     <title>Olimpa Design - Sobre Nosotros</title>
     <link rel="icon" href="images/icon.png">
     <meta name="description" content="Somos Olimpa Design, un emprendimiento dónde fabricamos muebles de diseño y decoración. Esta es nuestra historia.">
     <meta name="keywords" content="Decoración, muebles, hogar, diseño de interior, madera">
+
+        <!-- CDNs, Icons, Emojis & JS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -129,45 +137,48 @@
     <!-- SOBRE NOSOTROS HERO -->
     <div class="hero__img">
         <div class="header__emojis">
-            <i class="em em-hearts us__emojis" aria-role="presentation" aria-label="BLACK HEART SUIT"></i>
-                <h2>¿Quiénes somos?</h2>
             <i class="em em-woman-heart-man us__emojis" aria-role="presentation" aria-label=""></i>
+            <h2>Sobre nosotros</h2>
+            <i class="em em-hearts us__emojis" aria-role="presentation" aria-label="BLACK HEART SUIT"></i>
         </div>
     </div>
 
     <section class="aboutus">
         <article class="aboutus__article container-sm" data-aos="fade-right" data-aos-duration="1000">
-
+            <h3>Nuestra historia</h3>
+            <div class="aboutus__container">
+                <div class="aboutus__img img-fluid" id="aboutus__img1"></div>
                 <p class="aboutus__text">Bienvenides, somos Agustina y Daniel, una pareja de emprendedores Argentinos y queremos contarles sobre <span class="marca"> Olimpa Design </span> que nació de nuestro amor por crear ambientes cálidos y modernos a través de diseños con madera. <br>
                 
                 Somos ingenieros en sistemas, apasionados de la decoración y de la naturaleza, que durante la cuarentena con más tiempo libre empezamos a trabajar la madera, creando muebles y decoraciones que con su calidez puedan aportar a nuestro ambiente ese toque nórdico que buscamos, a la vez que reducimos nuestro impacto ambiental en el planeta, reciclando y reutilizando maderas de todo tipo. <br>
                 </p>
-            <div class="aboutus__img" id="aboutus__img1"></div>
+            </div>
         </article>
 
         <article class="aboutus__article2 container-sm" data-aos="fade-left" data-aos-duration="1000"> 
-                <p class="aboutus__text">Despúes de decorar nuestro departamento, nos expandimos haciendo pedidos para nuestros amigos y conocidos y no conformes con eso, seguimos creciendo hasta crear este emprendimiento tan querido. Pero por sobre todas las cosas, el corazón de <span class="marca"> Olimpa Design </span> es de nuestros <span class="negrita">rescataditos</span>, quienes dan nombre a todos nuestros productos y nos acompañaron durante la cuarentena hasta encontrar su hogar definitivo. <br>
-                Nuestro nombre viene de nuestra primer rescatada y quién marcó nuestros corazones, es en honor a ella que bautizamos este proyecto con su nombre. Les dejamos una foto para que conozcan a la fundadora de Olimpa </p>
-                <div class="aboutus__img" id="aboutus__img2"></div>
+            <h3>Olimpia: la fundadora</h3>
+            <div class="aboutus__container2">
+                <div class="aboutus__img img-fluid" id="aboutus__img2"></div>
+                <p class="aboutus__text">Despúes de decorar nuestro departamento, nos expandimos haciendo pedidos para nuestros amigos y conocidos. Pero por sobre todas las cosas, el corazón de <span class="marca"> Olimpa Design </span> es de nuestros <span class="negrita">rescataditos</span>, quienes dan nombre a todos nuestros productos y nos acompañaron durante la cuarentena hasta encontrar su hogar definitivo. <br>
+                Nuestro nombre viene de nuestra primer rescatada y quién marcó nuestros corazones, es en honor a ella que bautizamos este proyecto con su nombre. Les dejamos una foto para que conozcan a Olimpia, la chihuahua más loca del condado, fundadora de <span class="marca"> Olimpa Design </span>. </p>
+            </div>
         </article>
 
         <article class="aboutus__article3 container-sm" data-aos="fade-up" data-aos-duration="1000">
-            <h5>¿Qué ofrecemos?</h5>
+            <h3>¿Qué ofrecemos?</h3>
             
-            <p class="aboutus__text2">Creemos que el hogar es un lugar sagrado donde deben primar la armonía y calidez al mismo tiempo que refleja nuestra personalidad. Nuestro propósito en <span class="marca">Olimpa Design</span> es crear ambientes modernos y cálidos a través de nuestros materiañes. Te dejamos a continuación una muestra de nuestros modelos realizados especialmente para nuestros clientes:</p>
+            <p class="aboutus__text2">Creemos que el hogar es un lugar sagrado donde deben primar la armonía y calidez al mismo tiempo que refleja nuestra personalidad. Nuestro propósito en <span class="marca">Olimpa Design</span> es crear ambientes modernos y cálidos a través de nuestros materiañes. <span class="hidden">Te dejamos a continuación una muestra de nuestros modelos realizados especialmente para nuestros clientes:</span></p>
 
-            <div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6 colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                        <div class="col-2 colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                        <div class="col-3 colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-3 colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                        <div class="col-2 colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                        <div class="col-6 colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-                    </div>
+            <div class="aboutus__gallery container">
+                <div class="row">
+                    <div class="col-6 colim1" id="colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    <div class="col-2 colim2" id="colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    <div class="col-3 colim3" id="colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                </div>
+                <div class="row">
+                    <div class="col-3 colim4" id="colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    <div class="col-2 colim5" id="colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+                    <div class="col-6 colim6" id="colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
                 </div>
             </div>
         </article>
