--- a/contacto.html
+++ b/contacto.html
@@ -3,22 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+        <!-- Responsive -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Title, description & SEO -->
         <title>Olimpa Design - Contacto </title>
         <link rel="icon" href="images/icon.png">
         <meta name="description" content="Somos Olimpa Design, un emprendimiento dónde fabricamos muebles de diseño y decoración. Contactate con nosotros">
         <meta name="keywords" content="Decoración, muebles, hogar, diseño de interior, madera">
+
+        <!-- CDNs, Icons, Emojis & JS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
+        <!-- CSS -->
         <link rel="stylesheet" href="css/main.css">
     </head>
 
-
 <body>
-
     <!-- HEADER -->
     <div class="scroll">
         <div class="banner banner__header">
@@ -124,7 +130,6 @@
                 </div>  
             </nav>
     </header>  
-
 <main>
     <!-- WHATSAPP ICON -->
     <a href="404.html"><span class="iconify whatsapp" data-icon="logos:whatsapp" data-inline="false" id="whatsapp"></span></a>
@@ -279,6 +284,5 @@
         <p>Copyright &copy; 2021</p>
     </div>
 </footer>
-
 </body>
 </html>
