--- a/diseno.html
+++ b/diseno.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Title, description & SEO -->
     <title>Olimpa Design - Armá Tú Diseño</title>
+    <link rel="icon" href="Images/icon.png">
     <meta name="description" content="Somos Olimpa Design, un emprendimiento dónde fabricamos muebles de diseño y decoración con distintos tipos de maderas. ¡Te asesoramos en la creación de espacios! ">
     <meta name="keywords" content="Decoración, muebles, hogar, diseño de interior, madera">
+
+    <!-- CDNs, Icons, Emojis & JS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="https://use.fontawesome.com/249a6a1c93.js"></script>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <link rel="icon" href="Images/icon.png">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -157,7 +165,7 @@
         <!-- </article> -->
     
 
-        <article class="diseno__gallery">  
+        <!-- <article class="diseno__gallery">  
             <h2>Mirá algunos de los diseños de nuestros clientes finalizados</h2>
             <div class="container container__gallery">
                     <div class="gallery__img img-fluid"><img src="images/cliente-diseno1.jpg" alt="diseno_de_cliente"></div>
@@ -168,20 +176,24 @@
                     <div class="gallery__img img-fluid"><img src="images/cliente-diseno6.jpg" alt="diseno_de_cliente"></div>
                     <div class="gallery__img img-fluid"><img src="images/cliente-diseno7.jpg" alt="diseno_de_cliente"></div>
             </div>
-        </article>
+        </article> -->
         
     <!-- GALERIA DE DISEÑOS -->
-
     <div class="container">
         <div class="row">
-            <div class="col-6 colim1"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-2 colim2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-3 colim3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-6 coldiseno" id="coldiseno1"> <a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-2 coldiseno" id="coldiseno2"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-3 coldiseno" id="coldiseno3"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
         </div>
         <div class="row">
-            <div class="col-3 colim4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-2 colim5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
-            <div class="col-6 colim6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-3 coldiseno" id="coldiseno4"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-2 coldiseno" id="coldiseno5"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-6 coldiseno" id="coldiseno6"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+        </div>
+        <div class="row">
+            <div class="col-6 coldiseno" id="coldiseno7"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-2 coldiseno" id="coldiseno8"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
+            <div class="col-3 coldiseno" id="coldiseno9"><a href="https://www.instagram.com/olimpa.design/">Ver proyecto</a></div>
         </div>
     </div>
 
@@ -250,7 +262,42 @@
     </div> -->
 
     <!-- TESTIMONIALS -->
-    <div class="demo">
+    <div class="testimonials">
+        <div class="testimonials__container">
+            <span class="icon fa fa-quote-left"></span>
+            <p class="testimonials__description">
+                Excelente producto, muy buen material, estéticamente hermoso, para lo que necesitaba. Muy conforme, lo super recomiendo!!
+            </p>
+            <div class="testimonials__content testimonial-content">
+                <div class="pic"><img src="https://images.unsplash.com/photo-1503185912284-5271ff81b9a8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt=""></div>
+                <p class="testimonials__title">@caroc95</p>
+            </div>
+        </div>
+
+        <div class="testimonials__container">
+            <span class="icon fa fa-quote-left"></span>
+            <p class="testimonials__description">
+                Tremendo el asesoramiento del staff y el producto quedo muy similar al modelo. Relación precio/calidad ¡súper recomendable!
+            </p>
+            <div class="testimonials__content testimonial-content">
+                <div class="pic"><img src="https://images.unsplash.com/photo-1541647376583-8934aaf3448a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHByb2ZpbGUlMjBwaG90b3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt=""></div>
+                <p class="testimonials__title">@damianb_420</p>
+            </div>
+        </div>
+
+        <div class="testimonials__container">
+            <span class="icon fa fa-quote-left"></span>
+            <p class="testimonials__description">
+                ¡No paro de mover la cola! Me diseñaron un modelo para tener todos mis juguetitos ordenados y dormir siesta toda la tarde, califico con 10 guaus.
+            </p>
+            <div class="testimonials__content testimonial-content">
+                <div class="pic"><img src="https://images.unsplash.com/photo-1556229174-5e42a09e45af?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=343&q=80" alt=""></div>
+                <p class="testimonials__title">Pupi</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="demo">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -269,7 +316,7 @@
                     <div class="testimonial">
                         <span class="icon fa fa-quote-left"></span>
                         <p class="description">
-                            Tremendo el asesoramiento del staff y el prodducto quedo muy similar al modelo. Relación precio/calidad ¡súper recomendable!
+                            Tremendo el asesoramiento del staff y el producto quedo muy similar al modelo. Relación precio/calidad ¡súper recomendable!
                         </p>
                         <div class="testimonial-content">
                             <div class="pic"><img src="https://images.unsplash.com/photo-1541647376583-8934aaf3448a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHByb2ZpbGUlMjBwaG90b3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt=""></div>
@@ -291,7 +338,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- FORM -->
     <section class="diseno__section">
