--- a/productos.html
+++ b/productos.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">  
+
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">   -->
+
+    <!-- Title, description & SEO -->
     <title>Olimpa Design - Productos</title>
+    <link rel="icon" href="images/icon.png">
     <meta name="description" content="Encontrá todos los productos de diseño y decoración en Olimpa Design - Todo madera">
     <meta name="keywords" content="Decoración, muebles, hogar, diseño de interior, madera">
+
+    <!-- CDNs, Icons, Emojis & JS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">  -->
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <link rel="icon" href="images/icon.png">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -457,7 +466,6 @@
         </div>
     </section>
 </section>
-
 </main>
 
 <footer>
