--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         <!-- COUNTDOWN -->
         <script src="js/main.js"></script>
         <!-- SCROLL-DOWN MENU -->
-        <!-- <script type="text/javascript"> -->
+        <script type="text/javascript">
         var lastScrollTop = 0;
         .scroll = document.getElementById(".scroll");
         window.addEventListener("scroll", function (){
@@ -591,7 +591,7 @@
         } else {
             .scroll.style.top="0";
         }
-        }) //FALSO ERROR. DA ERROR EL IF / ELSE PERO FUNCIONA
+        }) <!-- FALSO ERROR. DA ERROR EL IF / ELSE PERO FUNCIONA-->
         </script>
 </body>
 </html>
