--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     <!-- JS -->
         <!-- COUNTDOWN -->
         <script src="js/main.js"></script>
-        <!-- SCROLL-DOWN MENU -->
+        <!-- SCROLL-DOWN MENU - DA UN ERROR PERO ES FALSO -->
         <script type="text/javascript">
         var lastScrollTop = 0;
         .scroll = document.getElementById(".scroll");
@@ -591,7 +591,7 @@
         } else {
             .scroll.style.top="0";
         }
-        }) <!-- FALSO ERROR. DA ERROR EL IF / ELSE PERO FUNCIONA-->
+        })
         </script>
 </body>
 </html>
