arreglo de header: subrayado de productos en home

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <ul>
                         <li><a href="index.html" class="menu__pages--active">HOME</a></li>
-                        <li class="submenu"><a href="productos.html">PRODUCTOS<span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                        <li class="submenu"><a href="productos.html">PRODUCTOS</a><span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span>
                             <ul class="submenu__pages">
                                 <li class="submenu--item"><a href="productos.html">Comedor</a></li>
                                 <li class="submenu--item"><a href="productos.html">Dormitorio</a></li>
