prueba de merge

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <ul>
                         <li><a href="index.html" class="menu__pages--active">HOME</a></li>
-                        <li class="submenu"><a href="productos.html">PRODUCTOS</a><span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span>
+                        <li class="submenu"><a href="productos.html">PRODUCTOS<span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
                             <ul class="submenu__pages">
                                 <li class="submenu--item"><a href="productos.html">Comedor</a></li>
                                 <li class="submenu--item"><a href="productos.html">Dormitorio</a></li>
@@ -155,17 +155,12 @@
         </div>
     </div>
 
-    <!-- <div class="hero--sm">
-        <p>Diseñamos</p>
-        <h1>Tus muebles a medida</h1>
-        <a href="productos.html" class="vermas__btn">Ver más</a>
-    </div> -->
 
 <!-- MODAL -->
 <input type="checkbox" id="close">
 <label for="close" id="btn__close"></label>
 <div class="modal">
-    <div class="modal__container">
+    <div class="modal__container container-fluid">
         <div class="container d-flex flex-column align-items-center">
             <input type="checkbox" id="close">
             <label for="close" id="btn__close">X</label>
@@ -579,7 +574,7 @@
     <!-- JS -->
         <!-- COUNTDOWN -->
         <script src="js/main.js"></script>
-        <!-- SCROLL-DOWN MENU - DA UN ERROR PERO ES FALSO -->
+        <!-- SCROLL-DOWN MENU -->
         <script type="text/javascript">
         var lastScrollTop = 0;
         .scroll = document.getElementById(".scroll");
