prueba de git bash - diseño

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <ul>
                         <li><a href="index.html" class="menu__pages--active">HOME</a></li>
-                        <li class="submenu"><a href="productos.html">PRODUCTOS<span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span></a>
+                        <li class="submenu"><a href="productos.html">PRODUCTOS</a><span class="iconify arrow" data-icon="dashicons:arrow-down" data-inline="false"></span>
                             <ul class="submenu__pages">
                                 <li class="submenu--item"><a href="productos.html">Comedor</a></li>
                                 <li class="submenu--item"><a href="productos.html">Dormitorio</a></li>
@@ -243,13 +243,34 @@
         <div class="carousel__estilos">
             <div class="carousel__main">
                 <div id="content1" class="content">
-                    <div class="carousel__img" id="carousel1__1"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Nórdico</a></p></div>
-                    <div class="carousel__img" id="carousel1__2"><p><a href="productos.html" class="estilos__text">&nbsp   Estilo <br> Industrial</a></p></div>
-                    <div class="carousel__img" id="carousel1__3"><p><a href="productos.html" class="estilos__text">&nbsp   Estilo <br> Wabisabi</a></p></div>
-                    <div class="carousel__img" id="carousel1__4"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Vintage</a></p></div>
-                    <div class="carousel__img" id="carousel1__5"><p><a href="productos.html" class="estilos__text">&nbsp &nbsp    Estilo <br> Minimalista</a></p></div>
-                    <div class="carousel__img" id="carousel1__6"><p><a href="productos.html" class="estilos__text"> Estilo <br> Boho</a></p></div>
-                    <div class="carousel__img" id="carousel1__7"><p><a href="productos.html" class="estilos__text">&nbsp Estilo <br> Rústico</a></p></div>
+                    <div class="carousel__img" id="carousel1__1"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p> 
+                        <p>Nórdico</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__2"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p>
+                        <p>Industrial</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__3"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p>
+                        <p>Wabisabi</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__4"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p>
+                        <p>Vintage</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__5"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p>
+                        <p>Minimalista</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__6"><a href="productos.html" class="estilos__text"> 
+                        <p>Estilo</p>
+                        <p>Boho</p></a>
+                    </div>
+                    <div class="carousel__img" id="carousel1__7"><a href="productos.html" class="estilos__text">
+                        <p>Estilo</p>
+                        <p>Rústico</p></a>
+                    </div>
                 </div>
             </div>
         </div>
