arreglo final y restauracion de elementos eliminados por error

--- a/diseno.html
+++ b/diseno.html
@@ -219,17 +219,17 @@
 
             <form class="diseno__form">
                 <h3>Contanos acerca de tu idea</h3>
-                <div class="diseno__container col-md-8">
+                <div class="diseno__container col-8">
                     <label for="nombre" class="diseno__label form-label">Nombre</label>
                     <input type="text" class="diseno__input form-control" id="nombre" placeholder="Ingresá tu nombre"> 
                 </div>
 
-                <div class="diseno__container col-md-8">
+                <div class="diseno__container col-8">
                     <label for="inputCity" class="diseno__label form-label">Ciudad</label>
                     <input type="text" class="diseno__input form-control" id="inputCity" placeholder="Localidad - Barrio">
                 </div>
 
-                <div class="diseno__container col-md-8">
+                <div class="diseno__container col-8">
                     ¿Qué diseño estás buscando?<br>
                     <!-- DESPLEGABLE -->
                     <label for="diseno" class="diseno__label form-label"></label>
@@ -247,7 +247,7 @@
                     </select>
                 </div>
 
-                <div class="diseno__container col-md-8">
+                <div class="diseno__container col-8">
                 <label for="consulta" class="form__label">Consulta:</label> 
                 <textarea name="consulta" class="diseno__input form-control" id="consulta" cols="4" rows="6" placeholder="Contanos acerca de tu idea"></textarea>
                 </div>
